# sigma-core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  conanfile.txt  format  sigma-engine.plugin  sigma.cmake  sigma_five_setup.cmake  sigma_setup.cmake  unipac.json  vcpkg.json
backends/graphics/opengl/: CMakeLists.txt
backends/graphics/sopengl/: .gitignore  CMakeLists.txt  LICENSE  README.md
backends/platform/SDL2/: CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/include/editor/: application.hpp  assimp_importer.hpp  component_manager.hpp  component_system_manager.hpp  config.hpp  entity_manager.hpp  entity_manager_model.hpp  trackball_controller.hpp
editor/plugins/: CMakeLists.txt
editor/plugins/assimp_import_plugin/: CMakeLists.txt
editor/resources/ui/: main.qml
editor/src/editor/: application.cpp  assimp_importer.cpp  component_manager.cpp  component_system_manager.cpp  entity_manager.cpp  entity_manager_model.cpp  main.cpp  trackball_controller.cpp
editor/ui/: MainWindow.ui
engine/: CMakeLists.txt
engine/cmake-modules/: plugin_utils.cmake
engine/include/: compile_time_hash.hpp  context.hpp  object.hpp  object_pool.hpp  type_info.hpp
engine/include/game/: component.hpp  component_bitset_manager.hpp  component_manager.hpp  component_pool.hpp  component_system.hpp  component_system_manager.hpp  entity.hpp  entity_manager.hpp  entity_world.hpp  scene.hpp  static_mesh_component.hpp  static_mesh_component_system.hpp  transform_component.hpp
engine/include/graphics/: graphics_system.hpp  static_mesh.hpp
engine/include/math/: mat2.hpp  mat3.hpp  mat4.hpp  quaternion.hpp  vec2.hpp  vec3.hpp
engine/include/sigmafive/: config.hpp  engine.hpp  object.hpp  type_info.hpp
engine/include/system/: resource.hpp  resource_manager.hpp  window.hpp
engine/plugins/: CMakeLists.txt
engine/plugins/OpenGL/: CMakeLists.txt
engine/plugins/SDL2Window/: CMakeLists.txt
engine/plugins/SDLWindow/: CMakeLists.txt
engine/plugins/opengl_context/: CMakeLists.txt
engine/plugins/sdl_window/: CMakeLists.txt
engine/src/: context.cpp  main.cpp  object.cpp  object_pool.cpp
engine/src/game/: component.cpp  component_bitset_manager.cpp  component_manager.cpp  component_pool.cpp  component_system.cpp  component_system_manager.cpp  entity.cpp  entity_manager.cpp  entity_world.cpp  scene.cpp  static_mesh_component.cpp  static_mesh_component_system.cpp  transform_component.cpp
engine/src/graphics/: graphics_system.cpp  static_mesh.cpp
engine/src/sigmafive/: application.cpp  engine.cpp  object.cpp
engine/src/system/: resource.cpp  resource_manager.cpp  window.cpp
engine/tests/: CMakeLists.txt  main.cpp  object_tests.cpp
engine/tests/game/: component_manager_tests.cpp  component_system_manager_tests.cpp  component_system_tests.cpp  component_tests.cpp  entity_manager_tests.cpp  entity_tests.cpp  entity_world_tests.cpp  fake_components.cpp  fake_components.hpp
engine/tests/math/: mat2_tests.cpp  mat3_tests.cpp  mat4_tests.cpp  quaternion_tests.cpp  util_tests.cpp  vec2_tests.cpp  vec3_tests.cpp  vec4_tests.cpp
engine/tests/system/: resource_manager_tests.cpp  resource_tests.cpp
plugins/assimp_import_plugin/: CMakeLists.txt
plugins/assimp_import_plugin/include/: assimp_import_plugin.hpp
plugins/opengl_context/: CMakeLists.txt
plugins/opengl_context/include/: context.hpp  material.hpp  static_mesh_manager.hpp
plugins/opengl_context/src/: context.cpp  material.cpp  static_mesh_manager.cpp
plugins/sdl_window/: CMakeLists.txt
samples/simple-sample/: CMakeLists.txt  main.cpp
sigmafive-editor/: CMakeLists.txt
sigmafive-editor/include/editor/: application.hpp  assimp_importer.hpp  entity_manager_model.hpp
sigmafive-editor/resources/ui/: MainWindow.ui  main.qml
sigmafive-editor/src/: main.cpp
sigmafive-editor/src/editor/: assimp_importer.cpp  entity_manager_model.cpp  main.cpp  trackball_controller.cpp
sigmafive-engine/: CMakeLists.txt
sigmafive-engine/cmake-modules/: plugin_utils.cmake
sigmafive-engine/tests/: CMakeLists.txt  main.cpp
simple_game/: CMakeLists.txt  settings.json
simple_game/include/: grid_component.hpp  simple_game.hpp  simple_game_config.hpp  simple_world.hpp
simple_game/resources/: 08 - Default.mat  Beta_Body_MAT.mat  Beta_Joints_MAT.mat  CMakeLists.txt  NissiBeach.cub  dna.txt  explode.geom  floor.mtl  glass.frag  glass.mat  glass.smat  matcap.frag  matcap.vert  material_test_scene.blend  material_test_scene.bpt  material_test_scene.fbx  material_test_scene.scn  patchy_cement1.mat  rustediron2.mat  simple.scn  skybox.cub  skybox.frag  skybox.mat  test-scene.blend  tiles1.mat  water_packed.blend  water_packed.blend1  water_packed.scn  yellow.mat  yellow_plastic.smat
simple_game/src/: main.cpp  simple_game.cpp
test/: CMakeLists.txt
test/sigma/: AABB_tests.cpp  buddy_array_allocator_tests.cpp  component_store_tests.cpp  frustum_tests.cpp  mock_components.hpp  world_tests.cpp
tests/: CMakeLists.txt  entity_manager_tests.cpp  main.cpp  mock_components.hpp  object_tests.cpp  world_tests.cpp
tests/entity/: component_manager_tests.cpp  component_system_manager_tests.cpp  component_system_tests.cpp  component_tests.cpp  default_component_cache_tests.cpp  entity_manager_tests.cpp  entity_tests.cpp  fake_components.hpp
tests/game/: component_manager_tests.cpp  component_system_manager_tests.cpp  component_system_tests.cpp  component_tests.cpp  entity_manager_tests.cpp  entity_tests.cpp  fake_components.cpp  fake_components.hpp
tests/math/: mat2_tests.cpp  mat4_tests.cpp  quaternion_tests.cpp  util_tests.cpp
tests/resource/: resource_tests.cpp
tools/editor/: CMakeLists.txt
tools/material-compiler/: CMakeLists.txt  README.md
tools/model-compiler/: CMakeLists.txt  README.md
tools/pakcc/: CMakeLists.txt
tools/scmodel/: CMakeLists.txt  README.md
tools/scompiler/: CMakeLists.txt  blender_export.py
tools/screflect/: CMakeLists.txt
tools/seditor/: CMakeLists.txt  qml.qrc
tools/texture-compiler/: CMakeLists.txt  README.md
(+1052 files in other folders)
